messages(item-service) : 회원용 메시지 추가

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,9 @@ label.item.open=판매 여부
 label.item.regions=등록 지역
 label.item.itemType=상품 종류
 label.item.deliveryCode=배송 방식
+label.member.loginId=로그인 ID
+label.member.password=비밀번호
+label.member.name=회원 이름
 
 page.items=상품 목록
 page.toItems=목록으로
