--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -7,6 +7,9 @@ label.item.open=Sale Status
 label.item.regions=Registration Area
 label.item.itemType=Item Type
 label.item.deliveryCode=Delivery Method
+label.member.loginId=Login ID
+label.member.password=Password
+label.member.name=Member Name
 
 page.items=Items
 page.toItems=To Items
